--- a/styles.css
+++ b/styles.css
@@ -6,32 +6,36 @@ body {
   align-items: center;
   height: 100vh;
   margin: 0;
+  overflow: hidden;
 }
 
 #container {
   padding: 20px;
   width: 95%;
-  max-width: 800px;
+  max-width: ${maxWidth}px;
   background: #f5f5f5;
   border: 1px solid #ccc;
   border-radius: 5px;
-  text-align: left; /* Asegurar que el texto dentro no esté centrado, si así lo deseas */
+  text-align: center;
+  box-sizing: border-box;
+  margin: 0 auto;
 }
 
 #title {
   font-size: 24px;
   margin-bottom: 10px;
-  text-align: center; /* Centrar el título */
+  text-align: center;
 }
 
 #description {
   font-size: 16px;
   margin-bottom: 20px;
-  text-align: center; /* Centrar la descripción */
+  text-align: center;
 }
 
 #chart {
   width: 100%;
+  max-width: ${maxWidth}px;
   height: auto;
   margin: 0 auto;
 }
